--- a/js/dpunks.css
+++ b/js/dpunks.css
@@ -6,8 +6,13 @@ body {
   text-align: center;
   background-color: black;
 }
-.comesoon {
+.txt {
 	padding: 20px;
+	text-align: center;
+	font-size: 48pt;
+}
+.comesoon {
+	padding: 10px;
 	text-align: center;
 	font-size: 32pt;
 }
